--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <link rel="stylesheet" href=".css/style.css">
 </head>
 <body>
-    Hello World
+    <header>
+        Ryan Chapman
+    </header>
+    <div id="picture" class="left"></div>
+    <div class="right">
+        <div class="subhead">
+            About Me
+        </div>
+        <div class="textbox">
+            Write Write Write
+        </div>
+    </div>
+
 </body>
 </html>
