--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta name="keywors" content="project, personal, website">
     <meta name="author" content="Ryan Louis Chapman">
     <title>Ryan L Chapman</title>
-    <link rel="stylesheet" href=".css/style.css">
+    <link rel="stylesheet" href="../.css/style.css">
 </head>
 <body>
-    <header>
-        Ryan Chapman
+    <header id="parallelogram">
+        <h1>
+            Ryan Chapman
+        </h1>
     </header>
     <div id="picture" class="left"></div>
     <div class="right">
