--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywors" content="project, personal, website">
     <meta name="author" content="Ryan Louis Chapman">
     <title>Ryan L Chapman</title>
-    <link rel="stylesheet" href="../.css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header id="parallelogram">
