--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header id="parallelogram">
-        <h1>
+    <header id="head_para">
+        <h1 id="rev_head_para">
             Ryan Chapman
         </h1>
     </header>
