--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <div id="picture" class="left"></div>
     <div class="right">
-        <div class="subhead">
+        <div class="subhead_pr">
             About Me
         </div>
         <div class="textbox">
