--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             Ryan Chapman
         </h1>
     </header>
-    <div id="picture" class="left"></div>
+    <div id="picture" class="left">
+        <img src="me_website.png" alt="Photograph of a handsome man, Ryan Chapman">
+    </div>
     <div class="right">
         <div class="subhead_pr">
             About Me
