See how picture is affected

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
             Ryan Chapman
         </h1>
     </header>
-    <div id="picture" class="left">
+    <div class="left" id="picture">
         <img src="me_website.png" alt="Photograph of a handsome man, Ryan Chapman">
     </div>
     <div class="right">
         <div class="subhead_pr">
+            <div class="rev_subhead_pr">
             About Me
+            </div>
         </div>
         <div class="textbox">
             Write Write Write
