--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             Ryan Chapman
         </h1>
     </header>
-    <div class="left" id="picture">
-        <img src="me_website.png" alt="Photograph of a handsome man, Ryan Chapman">
+    <div class="left">
+        <img id="picture" src="me_website.png" alt="Photograph of a handsome man, Ryan Chapman">
     </div>
     <div class="right">
         <div class="subhead_pr">
