Moved About to Right

--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
             Ryan Chapman
         </h1>
     </header>
-    <div class="left">
-        <img id="picture" src="me_website.png" alt="Photograph of a handsome man, Ryan Chapman">
-    </div>
-    <div class="right">
-        <div class="subhead_pr">
-            <div class="rev_subhead_pr">
-            About Me
-            </div>
+    <div class="full">
+        <div class="left">
+            <img id="picture" src="me_website.png" alt="Photograph of a handsome man, Ryan Chapman">
         </div>
-        <div class="textbox">
-            Write Write Write
+        <div class="right">
+            <div class="subhead_pr">
+                <div class="rev_subhead_pr">
+                About Me
+                </div>
+            </div>
+            <div class="textbox">
+                Write Write Write
+            </div>
         </div>
     </div>
 
