Created Left Subheader

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <div class="full">
         <div class="left">
             <img id="picture" src="me_website.png" alt="Photograph of a handsome man, Ryan Chapman">
+            <div class="subhead_pl">
+                <div class="rev_subhead_pl">
+                    Projects
+                </div>
+            </div>
+            <div class="textbox">
+                PROJECTS TEXTBOX TEXTBOX
+            </div>
         </div>
         <div class="right">
             <div class="subhead_pr">
