--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="right">
             <div class="subhead_pr">
                 <div class="rev_subhead_pr">
-                About Me
+                    Hello! I'm Ryan Chapman, a second year Computer Engineering Major at UCSC. I’m from Eureka, California, a small town in Humboldt County. Growing up I loved showing my creativity through games as well as playing sports, mainly Tennis and Disc Golf. I have a goal to play Disc Golf at a course in all 50 states! My love for disc sports has developed, as I joined the UCSC Ultimate Frisbee B team my first year at college. I have since become a captain and enjoy it so much, from the travel to the games and camaraderie.
                 </div>
             </div>
             <div class="textbox">
