--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Ryan Louis Chapman">
     <title>Ryan L Chapman</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/3b77896ce3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header id="head_para">
@@ -25,11 +26,6 @@
             </div>
             <div class="textbox">
                 PROJECTS TEXTBOX TEXTBOX
-            </div>
-            <div class="subhead_pl">
-                <div class="rev_subhead_pl">
-                    Contact
-                </div>
             </div>
         </div>
         <div class="right">
@@ -51,6 +47,11 @@
             </div>
         </div>
     </div>
-
+    <footer>
+        <i class="fas fa-mobile"></i>707-298-5929
+        <i class="fas fa-envelope"></i>><a href="mailto:rylchapm@ucsc.edu">rylchapm@ucsc.edu</a>
+        <i class="fas fa-linkedin"></i><a href="www.linkedin.com/in/ryan-l-chapman">LinkedIn</a>
+        <i class="fas fa-github"></i><a href="https://github.com/Ryan-L-Chapman">Github</a>
+    </footer>
 </body>
 </html>
