Inline footer Change

--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
         </div>
     </div>
     <footer>
-        <i class="fas fa-mobile"></i>707-298-5929
-        <i class="fas fa-envelope"></i>><a href="mailto:rylchapm@ucsc.edu">rylchapm@ucsc.edu</a>
-        <i class="fas fa-linkedin"></i><a href="www.linkedin.com/in/ryan-l-chapman">LinkedIn</a>
-        <i class="fas fa-github"></i><a href="https://github.com/Ryan-L-Chapman">Github</a>
+        <div id="foot">
+            <i class="fa-solid fa-mobile"></i>707-298-5929
+            <i class="fas fa-envelope"></i><a href="mailto:rylchapm@ucsc.edu">rylchapm@ucsc.edu</a>
+            <i class="fa-brands fa-linkedin"></i><a href="www.linkedin.com/in/ryan-l-chapman">LinkedIn</a>
+            <i class="fa-brands fa-github"></i><a href="https://github.com/Ryan-L-Chapman">Github</a>
+        </div>        
     </footer>
 </body>
 </html>
