--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             Ryan Chapman
         </h1>
     </header>
-    <div class="full">
+    <div class="wrapper">
         <div class="left">
             <img id="picture" src="me_website.png" alt="Photograph of a handsome man, Ryan Chapman">
             <div class="subhead_pl">
@@ -51,7 +51,7 @@
         <div id="foot">
             <i class="fa-solid fa-mobile"></i>707-298-5929
             <i class="fas fa-envelope"></i><a href="mailto:rylchapm@ucsc.edu">rylchapm@ucsc.edu</a>
-            <i class="fa-brands fa-linkedin"></i><a href="www.linkedin.com/in/ryan-l-chapman">LinkedIn</a>
+            <i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/ryan-l-chapman">LinkedIn</a>
             <i class="fa-brands fa-github"></i><a href="https://github.com/Ryan-L-Chapman">Github</a>
         </div>        
     </footer>
