--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     </div>
     <footer>
         <div id="foot">
-            <i class="fa-solid fa-mobile"></i>707-298-5929
-            <i class="fas fa-envelope"></i><a href="mailto:rylchapm@ucsc.edu">rylchapm@ucsc.edu</a>
-            <i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/ryan-l-chapman">LinkedIn</a>
-            <i class="fa-brands fa-github"></i><a href="https://github.com/Ryan-L-Chapman">Github</a>
+            <i class="fa-solid fa-mobile"></i> 707-298-5929 <div class="vertical"></div>
+            <i class="fas fa-envelope"></i><a href="mailto:rylchapm@ucsc.edu"> rylchapm@ucsc.edu</a> <div class="vertical"></div>
+            <i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/ryan-l-chapman"> LinkedIn</a> <div class="vertical"></div>
+            <i class="fa-brands fa-github"></i><a href="https://github.com/Ryan-L-Chapman"> Github</a> <div class="vertical"></div>
         </div>        
     </footer>
 </body>
