--- a/index.html
+++ b/index.html
@@ -35,12 +35,8 @@
                 </div>
             </div>
             <div class="textbox">
-                Hello! I'm Ryan Chapman, the creator of this website. I made this website so that I could showcase some of the projects that I’ve completed as well as to give a sneak peek into what I am currently working on at the moment. I also hope that you will get to know me a bit better as a person.
-
-                I’m from Eureka, California, a small town in Humboldt County. Growing up I experienced the beauty of nature, with massive redwood forests and amazing coastal views being prominent in Humboldt. I played tennis all four years of high school and disc golf for the latter half, increasing during covid since it was one of the only doable outdoor sports. There are some fantastic courses in Humboldt, including my favorite in the redwoods, even though Santa Cruz puts up some fierce competition. Recently I have created a new goal for myself - play a course in all 50 states. I have been wanting to travel more, there are so many beautiful and unique places to go, I want to experience them all eventually. 
-            
-                Currently though, I am mainly focusing on my studies. I’m a second year Computer Engineering major at UC Santa Cruz, concentrating in systems programming. I love the environment in Santa Cruz, as well as the coursework of UCSC that pitts me against tough problems that I must use my skills to solve. I think the food in Santa Cruz is wonderful, a special shout out to my favorite restaurant, Los Pericos, a fantastic taqueria - (I recommend the Super burrito with Chorizo). Santa Cruz gives a perfect mix of city life as well as rural life - Downtown has picturesque shops and events; while there are also a plethora of hikes to see the natural beauty of Santa Cruz. 
-                            </div>
+                Hello! I'm Ryan Chapman, the creator of this website. I made this website so that I could exhibit my projects and design skills. I’m currently a second year student at UC Santa Cruz, pursuing a degree in Computer Engineering: Systems programming. I heavily enjoy my classes and projects I work on, I love to code. Many different fields sound very interesting to me, I could see my future moving towards all sorts of different positions, software engineering, UI/UX development, IT systems, etc. Right now I am working towards gaining more experience and expanding my technical knowledge; I especially want to get some hands-on experience using Machine Learning in an applied setting. 
+            </div>
             <div class="subhead_pr">
                 <div class="rev_subhead_pr">
                     Passions
